[project]
name = "personal-database-mcp-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.2.1",
    "datasets>=4.0.0",
    "ddgs>=9.5.2",
    "duckduckgo-search>=8.1.1",
    "httpx>=0.28.1",
    "langchain>=0.3.27",
    "langchain-community>=0.3.27",
    "mcp[cli]>=1.13.0",
    "openai>=1.99.9",
    "qdrant-client>=1.15.1",
    "sentence-transformers>=5.1.0",
    "tqdm>=4.67.1",
    "transformers>=4.55.2",
]
